.kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: birthdays-deployment
  labels:
    app: birthdays
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: birthdays
    spec:
      containers:
      - name: birthdays-app
        image: gcr.io/resolut-birthdays/birthdays-latest
        imagePullPolicy: Always
        command: ['sh', 'run_production.sh']
        ports: 
        - name: birthday-app-port
          containerPort: 8000
      volumes:
      - name: birthdays-credentials
        secret:
          secretName: birthdays-credentials
