.kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: birthdays-service
  labels:
    app: birthdays
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: birthdays
