.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: birthdays-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: birthdays-ingress-ip
spec:
  backend:
    serviceName: birthdays-service
    servicePort: 80
